bad/bool_negation_of_class.example_compiler_output
ERROR
[1mbad/bool_negation_of_class.lat:6:2: [1;31merror: [0;1mcannot negate value of non-boolean type `X`[m
	!x;
	[1;32m^[m
